--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,18 @@
     margin: 0;
 }
 
+html {
+    scroll-padding-top: 7rem;
+}
+
 body {
     background-color: #c2d3e4;
 }
 
 header {
+    position: sticky;
+    top: 0px;
+    width: 100vw;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -17,8 +24,13 @@ header {
 
 header h1 {
     display: inline-block;
-    font-size: 48px;
     text-shadow: 2px 2px 0px #000000;
+}
+
+header h1 a{
+    font-size: 48px;
+    color: #ffffff;
+    text-decoration: none;
 }
 
 header h1 .seo {
@@ -42,13 +54,10 @@ header nav ul li {
     margin-left: 25px;
 }
 
-a {
+header nav ul li a{
     color: #ffffff;
     text-decoration: none;
-}
-
-p {
-    font-size: 16px;
+    text-shadow: 1px 1px 0px #000000;
 }
 
 .hero {
@@ -58,6 +67,10 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+
+p {
+    font-size: 16px;
 }
 
 .float-left {
@@ -78,20 +91,25 @@ p {
 
 .content-section {
     margin-bottom: 20px;
-    padding: 50px;
+    padding: 40px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    text-align: justify;
+    background-color: #449ccb;
     color: #ffffff;
+    box-shadow: 5px 5px 2px #2a607c;
 }
 
 .content-section img {
     max-height: 200px;
+    padding: 5px;
+    border: 2px solid #ffffff;
 }
 
 .content-section h2 {
     margin-bottom: 20px;
     font-size: 36px;
+    text-shadow: 2px 2px 0px #000000;
 }
 
 .benefits {
@@ -103,6 +121,7 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    box-shadow: 5px 5px 2px #2a607c;
 }
 
 .benefit {
@@ -113,12 +132,17 @@ p {
 .benefit h3 {
     margin-bottom: 10px;
     text-align: center;
+    text-shadow: 2px 2px 0px #000000;
 }
 
 .benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+}
+
+.benefit p {
+    text-align: justify;
 }
 
 footer {
@@ -128,6 +152,6 @@ footer {
     text-align: center;
 }
 
-footer h2 {
+footer h4 {
     font-size: 20px;
 }
